<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragmento2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/calligraphy"
        android:text="Residencial Homelife"
        android:textColor="@color/homelife"
        android:textSize="55dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtJuntaPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/calligraphy"
        android:text="@string/textview3"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAdministracion" />

    <ImageView
        android:id="@+id/imgJuntaPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/txtJuntaPro"
        app:layout_constraintTop_toBottomOf="@+id/imgAdministracion" />

    <TextView
        android:id="@+id/txtWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/calligraphy"
        android:text="@string/textview4"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJuntaPro" />

    <ImageView
        android:id="@+id/imgAdministracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:src="@drawable/ic_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toEndOf="@+id/txtAdministracion"
        app:layout_constraintTop_toBottomOf="@+id/imgRecepcion" />

    <ImageView
        android:id="@+id/imgWhatsApp"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/whatsapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/txtWhatsApp"
        app:layout_constraintTop_toBottomOf="@+id/imgJuntaPro" />

    <TextView
        android:id="@+id/txtNumJunPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/TextJunPro"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/imgJuntaPro"
        app:layout_constraintTop_toBottomOf="@+id/txtNumAdm" />

    <TextView
        android:id="@+id/txtAdministracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/calligraphy"
        android:text="@string/textview2"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecepcion" />

    <ImageView
        android:id="@+id/imgRecepcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/txtRecepcion"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtNumAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/TextAdministracion"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/imgAdministracion"
        app:layout_constraintTop_toBottomOf="@+id/txtNumRecep" />

    <TextView
        android:id="@+id/txtRecepcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/calligraphy"
        android:text="@string/textview1"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtNumRecep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/TextRecepcion"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/imgRecepcion"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtNunWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/TextWhastsApp"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/imgWhatsApp"
        app:layout_constraintTop_toBottomOf="@+id/txtNumJunPro" />

</androidx.constraintlayout.widget.ConstraintLayout>
